@@ -5,6 +5,7 @@
   library. This is a binary incompatible change so the soversion of the
   libraries has been incremented. The new parameter should make it easier to
   use callbacks in practice.
+- Add reload parameter for security init/cleanup functions.
 - Add mosquitto_want_write() for use when using own select() loop with
   mosquitto_socket().
 - Fix reloading of log configuration.
